<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditContentActivity">


    <TextView
        android:id="@+id/contentPromptTextView"
        android:layout_width="321dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:fontFamily="@font/belleza"
        android:text="@string/contentPromptTagDescription"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/contentDetailsEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contentPromptTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/contentDetailsTagsHintText"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/contentSetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="23dp"
        android:layout_marginStart="55dp"
        android:onClick="SetTag"
        android:text="@string/contentOKText"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="868dp" />

    <Button
        android:id="@+id/contentCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/contentSetButton"
        android:layout_marginEnd="62dp"
        android:text="@string/contentCancelText"
        android:onClick="CancelTag"
        tools:layout_editor_absoluteX="300dp"
        tools:layout_editor_absoluteY="868dp" />


</RelativeLayout>