<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_caption_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginStart="8dp"
        android:onClick="onClickCaption"
        android:text="@string/captionButtonText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/currentImageCaptionTextView"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_margin="8dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/cameraButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/imageview"
        app:layout_constraintBottom_toTopOf="@+id/currentImageCaptionTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageIndexTextView"
        app:srcCompat="@android:color/darker_gray" />

    <ImageButton
        android:id="@+id/cameraButton"
        android:layout_width="73dp"
        android:layout_height="68dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/camerabutton"
        android:onClick="onClickSnap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <Button
        android:id="@+id/openSearchButton"
        android:layout_width="127dp"
        android:layout_height="48dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        android:onClick="OnClickSearch"
        android:text="@string/searchText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_tag_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:onClick="onClickTags"
        android:text="@string/tagButtonText"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_caption_id"
        app:layout_constraintStart_toEndOf="@+id/button_caption_id" />

    <EditText
        android:id="@+id/imageIndexTextView"
        android:layout_width="79dp"
        android:layout_height="35dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@android:color/transparent"
        android:ems="12"
        android:enabled="false"
        android:inputType="textPersonName"
        android:textAlignment="textEnd"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2"
        android:importantForAutofill="no" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00F3ECEC"
        android:contentDescription="none"
        android:onClick="ShareButton"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeShareDrawable" />

</android.support.constraint.ConstraintLayout>